--- a/GoogleDriveToPhotos/appsettings.json
+++ b/GoogleDriveToPhotos/appsettings.json
@@ -6,18 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "Google": {
-    "ApiKey": "",
-    "ClientId": "",
-    "ClientSecret": ""
-  },
   "CasCap": {
     "MainFolderName": "This is the main folder to read from and save too.",
     "SyncFromMinutes": 30,
     "GooglePhotosOptions": {
       // This is the email address of the Google Account.
-      "User": "googledrivetophotossync@supple-outlet-448916-k5.iam.gserviceaccount.com",
-      //"peterhuber5th@gmail.com", //"lenzen2huber@gmail.com"
+      "User": "something@gmail.com",
 
       // There are 5 security scopes, which can be combined.
       "Scopes": [
